--- a/bai2.html
+++ b/bai2.html
@@ -6,6 +6,7 @@
         <img src="./images/scrambeld egges.jpg"/>
         <h2>Ingredients</h2>
         <ul>
+            <p>jsndjsd</p>
             <li>2 eggs</li>
             <li>1tbs butter</li>
             <li>2tbs cream</li>
@@ -13,6 +14,7 @@
         <h2>Method</h2>
         <ol>
             <li>Melt bunter in a frying pan over a medium heat</li>
+            <h1>avav</h1>
             <li>Gently mix the eggs and cream in a bowl</li>
             <li>Once bunter has melted add cream and eggs</li>
             <li>Using a spatula fold the eggs from the edge of the pan to the xenter every 20 seconds (as if you are making an omelette)</li>
